tests/fixtures/invalid/max_int_list.py
# Cannot call max() with Int, List[int]
x = max(1, [1, 2, 3])
